# drinkApp

./: CMakeLists.txt  main.cpp  main.qml  main.qrc
App/: CMakeLists.txt
App/Controllers/: CMakeLists.txt  SystemController.cpp  SystemController.h
App/Models/: CMakeLists.txt  Drink.cpp  Drink.h  DrinkListModel.cpp  DrinkListModel.h
App/Views/: CMakeLists.txt  CoffeeSelectView.qml  ConfirmationScreen.qml  DrinkSelectView.qml  DrinkSizeSelectionView.qml  FinishedView.qml  HotCoolSelectView.qml  LoadingIndicatorView.qml  SugarSizeSelectionView.qml
Commons/: CMakeLists.txt  Font.qml
Components/: BackButton.qml  BottomTimer.qml  CMakeLists.txt  DrinkCustomItem.qml  MyLoader.qml  NavigationButton.qml
Components/Items/: .qmlls.ini  CMakeLists.txt  DrinkCustomItem.qml
Core/: CMakeLists.txt  Colors.qml  Fonts.qml  Resources.qml
